--- a/info/info19.html
+++ b/info/info19.html
@@ -27,6 +27,9 @@ td.h1, h1 {
   text-align: center;
   background: lightblue;
 }
+h1 {
+  font-size: 3.5em;
+}
 img.bullet {
   width: 16px;
   height: 16px;
@@ -38,13 +41,14 @@ img.bullet {
 <body>
 <div id="header">
   <div class="left">
-  <a href="/ov.html#divinfo"><img src="/image/logo.png"/></a>
-  <div>Allgemeine Infos</div>
+  <a href="/ov.html#divinfo19"><img src="/image/logo.png"/></a>
+  <div>Allgemeines</div>
   </div><div class="right">
-  <a href="/ov.html#divinfo"><img src="/image/logo.png"/></a>
+  <a href="/ov.html#divinfo19"><img src="/image/logo.png"/></a>
   </div>
 </div>
 <div id="content_container">
+<h1>Saison 2018/19</h1>
 <table cellspacing="0" cellpadding="0">
 <colgroup>
   <col width="*">
@@ -65,11 +69,12 @@ img.bullet {
 <tr><td colspan="5">&nbsp;</td></tr>
 
 <tr><td colspan="5" class="h1">Anzahl der Spieler</td></tr>
-<tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>ab U15: </b></td><td>6</td><td>&nbsp;</td></tr>
-<tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>U13: </b></td><td>4</td><td>&nbsp;</td></tr>
-<tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>U12: </b></td><td>3</td><td>&nbsp;</td></tr>
-<tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>U11: </b></td><td>2</td><td>&nbsp;</td></tr>
-<tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>U10: </b></td><td>2</td><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>ab U17: </b></td><td>6 + 6 (+ Liberas)</td><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>ab U15: </b></td><td>6 + 6</td><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>U13: </b></td><td>4 + 4</td><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>U12: </b></td><td>3 + 3</td><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>U11: </b></td><td>2 + 2</td><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>U10: </b></td><td>2 + 2</td><td>&nbsp;</td></tr>
 <tr><td colspan="5">&nbsp;</td></tr>
 
 <tr><td colspan="5" class="h1">Größe des Spielfelds</td></tr>
