reorganisation of stats

--- a/ov.html
+++ b/ov.html
@@ -51,13 +51,13 @@ function init() {
                'schedule_u12_19', 'standings_u12q_19'],
     'u13_19': ['certificate_u13x_19', 'standings_u13x_19', 'results_u13x_19', 'statistics_u13x_19',
                'standings_u13f_19', 'results_u13f_19', 'schedule_u13_19', 'standings_u13_19', 'statistics_u13_19'],
-    'u15_19': ['standings_u15f_19', 'results_u15f_19', 'statistics_u15f_19', 'schedule_u15_19', 'standings_u15_19', 'statistics_u15pn_19'],
+    'u15_19': ['standings_u15f_19', 'results_u15f_19', 'statistics_u15_19', 'schedule_u15_19', 'standings_u15_19', 'statistics_u15pn_19'],
     'u17_19': ['statistics_u17_19', 'standings_u17_19', 'results_u17_19'],
 
     'br4_19': ['results_br4g_19', 'standings_br4g_19', 'schedule_br4_19', 'results_br4_19', 'standings_br4_19', 'statistics_br4_19'],
     'br3_19': ['schedule_br3_19', 'results_br3_19', 'standings_br3_19', 'statistics_br3_19',
                'results_br3g_19', 'standings_br3g_19', 'statistics_br3g_19', 'teambuilding_br3_19'],
-    'br2_19': ['results_br2g_19', 'standings_br2g_19', 'results_br2m_19', 'schedule_br2m_19', 'statistics_br2m_19'],
+    'br2_19': ['results_br2g_19', 'standings_br2g_19', 'results_br2m_19', 'schedule_br2m_19', 'statistics_br2_19'],
     'br1_19': ['schedule_br1_19', 'results_br1_19', 'standings_br1_19', 'results_br1g_19', 'standings_br1g_19'],
 
     'info': ['calendar', 'wunsch', 'gesucht', 'divinfo20', 'divinfo19']
@@ -150,7 +150,7 @@ function init() {
       <!- -a id="grundlagen_u15" href="u15"><h3>Grundlagen</h3></a- ->
       <a id="standings_u15f" href="standings.html?key=u15f"><h3>Endstand</h3></a>
       <a id="results_u15f" href="results.html?key=u15f"><h3>Spiele (Finale)</h3></a>
-      <a id="statistics_u15f" href="/u15/statistics.html"><h3>Statistik (Finale)</h3></a>
+      <a id="statistics_u15" href="/u15/statistics.html"><h3>Statistik (Finale)</h3></a>
       <a id="schedule_u15" href="schedule.html?key=u15"><h3>Turniere (Qualifikation)</h3></a>
       <a id="standings_u15" href="standings.html?key=u15"><h3>Tabelle (Qualifikation)</h3></a>
       <a id="statistics_u15pn" href="/u15/statistics15pn.html"><h3>Statistik (Pordenone)</h3></a>
@@ -204,7 +204,7 @@ function init() {
     <div id="br2_2" class="expanded_container">
       <a id="schedule_br2m" href="schedule.html?key=br2m"><h3>Spieltermine (MPO)</h3></a>
       <a id="results_br2m" href="results.html?key=br2m"><h3>Ergebnisse (MPO)</h3></a>
-      <a id="statistics_br2m" href="/lld/statistics.html"><h3>Statistik (MPO)</h3></a>
+      <a id="statistics_br2" href="/lld/statistics.html"><h3>Statistik (MPO)</h3></a>
       <a id="results_br2g" href="results.html?key=br2g"><h3>Ergebnisse (GD)</h3></a>
       <a id="standings_br2g" href="standings.html?key=br2g"><h3>Tabelle (GD)</h3></a>
     </div>
@@ -249,7 +249,7 @@ function init() {
         <a id="certificate_u12x_19" href="/imageview.html?i=u12%2Fcertificate.jpeg&b=%2Fov.html%23certificate_u12x_19"><h3>Urkunde</h3></a>
         <a id="standings_u12x_19" href="standings.html?key=u12x_19"><h3>Endstand (ÖMS)</h3></a>
         <a id="results_u12x_19" href="results.html?key=u12x_19"><h3>Spiele (ÖMS)</h3></a>
-        <a id="statistics_u12x_19" href="/u12/statistics.html"><h3>Statistik (ÖMS)</h3></a>
+        <a id="statistics_u12x_19" href="/statistics/19/u12.html"><h3>Statistik (ÖMS)</h3></a>
         <a id="standings_u12f_19" href="standings.html?key=u12f_19"><h3>Endstand (Finale, weiblich)</h3></a>
         <a id="results_u12f_19" href="results.html?key=u12f_19"><h3>Spiele (Finale, weiblich)</h3></a>
         <a id="standings_u12m_19" href="standings.html?key=u12m_19"><h3>Endstand (Finale, männlich)</h3></a>
@@ -263,10 +263,10 @@ function init() {
         <a id="certificate_u13x_19" href="/imageview.html?i=u13%2Fcertificate.jpeg&b=%2Fov.html%23certificate_u13x_19"><h3>Urkunde</h3></a>
         <a id="standings_u13x_19" href="standings.html?key=u13x_19"><h3>Endstand (ÖMS)</h3></a>
         <a id="results_u13x_19" href="results.html?key=u13x_19"><h3>Spiele (ÖMS)</h3></a>
-        <a id="statistics_u13x_19" href="/u13/statisticsX.html"><h3>Statistik (ÖMS)</h3></a>
+        <a id="statistics_u13x_19" href="/statistics/19/u13x.html"><h3>Statistik (ÖMS)</h3></a>
         <a id="standings_u13f_19" href="standings.html?key=u13f_19"><h3>Endstand (Finale)</h3></a>
         <a id="results_u13f_19" href="results.html?key=u13f_19"><h3>Spiele (Finale)</h3></a>
-        <a id="statistics_u13_19" href="/u13/statistics.html"><h3>Statistik (Finale)</h3></a>
+        <a id="statistics_u13_19" href="/statistics/19/u13.html"><h3>Statistik (Finale)</h3></a>
         <a id="schedule_u13_19" href="schedule.html?key=u13_19"><h3>Turniere (Qualifikation)</h3></a>
         <a id="standings_u13_19" href="standings.html?key=u13_19"><h3>Tabelle (Qualifikation)</h3></a>
       </div>
@@ -275,17 +275,17 @@ function init() {
       <div id="u15_19_2" class="expanded_container">
         <a id="standings_u15f_19" href="standings.html?key=u15f_19"><h3>Endstand</h3></a>
         <a id="results_u15f_19" href="results.html?key=u15f_19"><h3>Spiele (Finale)</h3></a>
-        <a id="statistics_u15f_19" href="/u15/statistics.html"><h3>Statistik (Finale)</h3></a>
+        <a id="statistics_u15_19" href="/statistics/19/u15.html"><h3>Statistik (Finale)</h3></a>
         <a id="schedule_u15_19" href="schedule.html?key=u15_19"><h3>Turniere (Qualifikation)</h3></a>
         <a id="standings_u15_19" href="standings.html?key=u15_19"><h3>Tabelle (Qualifikation)</h3></a>
-        <a id="statistics_u15pn_19" href="/u15/statistics15pn.html"><h3>Statistik (Pordenone)</h3></a>
+        <a id="statistics_u15pn_19" href="/statistics/19/u15pn.html"><h3>Statistik (Pordenone)</h3></a>
       </div>
 
       <h2 id="u17_19" class="expandable">U17</h2>
       <div id="u17_19_2" class="expanded_container">
-        <a id="statistics_u17_19" href="/u17/statistics.html"><h3>Statistik</h3></a>
-        <a id="standings_u17_19" href="standings.html?key=u17_19"><h3>Endstand</h3></a>
         <a id="results_u17_19" href="results.html?key=u17_19"><h3>Spiele (Quali ÖMS)</h3></a>
+        <a id="standings_u17_19" href="standings.html?key=u17_19"><h3>Endstand</h3></a>
+        <a id="statistics_u17_19" href="/statistics/19/u17.html"><h3>Statistik</h3></a>
       </div>
 
 
@@ -295,7 +295,7 @@ function init() {
         <!--a id="schedule_br4_19" href="schedule.html?key=br4_19"><h3>Spieltermine (FD)</h3></a-->
         <a id="standings_br4_19" href="standings.html?key=br4_19"><h3>Tabelle (FD)</h3></a>
         <a id="results_br4_19" href="results.html?key=br4_19"><h3>Ergebnisse (FD)</h3></a>
-        <a id="statistics_br4_19" href="/uld/statistics4FD_19.html"><h3>Statistik (FD)</h3></a>
+        <a id="statistics_br4_19" href="/statistics/19/u15FD.html"><h3>Statistik (FD)</h3></a>
         <a id="standings_br4g_19" href="standings.html?key=br4g_19"><h3>Tabelle (GD)</h3></a>
         <a id="results_br4g_19" href="results.html?key=br4g_19"><h3>Ergebnisse (GD)</h3></a>
       </div>
@@ -306,10 +306,10 @@ function init() {
         <!--a id="schedule_br3_19" href="schedule.html?key=br3_19"><h3>Spieltermine (AR)</h3></a-->
         <a id="standings_br3_19" href="standings.html?key=br3_19"><h3>Tabelle (AR)</h3></a>
         <a id="results_br3_19" href="results.html?key=br3_19"><h3>Ergebnisse (AR)</h3></a>
-        <a id="statistics_br3_19" href="/uld/statistics3AR_19.html"><h3>Statistik (AR)</h3></a>
+        <a id="statistics_br3_19" href="/statistics/19/u15AR.html"><h3>Statistik (AR)</h3></a>
         <a id="standings_br3g_19" href="standings.html?key=br3g_19"><h3>Tabelle (GD)</h3></a>
         <a id="results_br3g_19" href="results.html?key=br3g_19"><h3>Ergebnisse (GD)</h3></a>
-        <a id="statistics_br3g_19" href="/uld/statistics3_19.html"><h3>Statistik (GD)</h3></a>
+        <a id="statistics_br3g_19" href="/statistics/19/br3.html"><h3>Statistik (GD)</h3></a>
         <a id="teambuilding_br3_19" href="/teambuilding/br3_19"><h3>Teambuilding</h3></a>
       </div>
 
@@ -317,7 +317,7 @@ function init() {
       <div id="br2_19_2" class="expanded_container">
         <!--a id="schedule_br2m_19" href="schedule.html?key=br2m_19"><h3>Spieltermine (MPO)</h3></a-->
         <a id="results_br2m_19" href="results.html?key=br2m_19"><h3>Ergebnisse (MPO)</h3></a>
-        <a id="statistics_br2m_19" href="/lld/statistics_19.html"><h3>Statistik (MPO)</h3></a>
+        <a id="statistics_br2_19" href="/statistics/19/mpo.html"><h3>Statistik (MPO)</h3></a>
         <a id="standings_br2g_19" href="standings.html?key=br2g_19"><h3>Tabelle (GD)</h3></a>
         <a id="results_br2g_19" href="results.html?key=br2g_19"><h3>Ergebnisse (GD)</h3></a>
       </div>
