teambuilding - error correction

--- a/teambuilding/br3_19/index.html
+++ b/teambuilding/br3_19/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   <div id="header"><div class="left">
-  <a href="/ov.html#teambuilding_br3"><img src="/image/logo.png"/></a>
+  <a href="/ov.html#teambuilding_br3_19"><img src="/image/logo.png"/></a>
   <div>Teambuilding</div>
   </div><div class="right">
-  <a href="/ov.html#teambuilding_br3"><img src="/image/logo.png"/></a>
+  <a href="/ov.html#teambuilding_br3_19"><img src="/image/logo.png"/></a>
   </div>
   </div>
 
