improve infos for next season

--- a/info/info20.html
+++ b/info/info20.html
@@ -69,7 +69,7 @@ img.bullet {
 
 <tr><td colspan="5" class="h1">Anzahl der Spieler</td></tr>
 <tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>ab U18: </b></td><td>6 + 6 (+ Liberas)</td><td>&nbsp;</td></tr>
-<tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>ab U16: </b></td><td>6 + 6</td><td>&nbsp;</td></tr>
+<tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>U16: </b></td><td>6 + 6</td><td>&nbsp;</td></tr>
 <tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>U15: </b></td><td>4 + 4</td><td>&nbsp;</td></tr>
 <tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>U14: </b></td><td>3 + 3</td><td>&nbsp;</td></tr>
 <tr><td>&nbsp;</td><td><img class="bullet" src="/image/ball32.png" alt="List item" /></td><td><b>U13: </b></td><td>2 + 2</td><td>&nbsp;</td></tr>
