--- a/ov.html
+++ b/ov.html
@@ -342,7 +342,7 @@ function init() {
     <a id="wunsch" href="info/wunschzettel.html"><h3>Ein Wunschzettel</h3></a>
     <a id="gesucht" href="info/gesucht.html"><h3>Gesucht!<br>Bitte an Freunde und Bekannte weiterleiten.</h3></a>
     <a id="divinfo20" href="info/info20.html"><h3>Allgemeine Infos - Neu!</h3></a>
-    <a id="divinfo19" href="info/info19.html"><h3>Allgemeine Infos</h3></a>
+    <a id="divinfo19" href="info/info19.html"><h3>Allgemeine Infos (Vorsaison)</h3></a>
   </div>
 
 </body>
